# hackathon-team-vibe_coderzy

./: .env.example  .env.production.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGES.md  CLOUDFLARE_SETUP_SUMMARY.md  CLOUDFLARE_TUNNEL.md  DOCKER.md  DOCKER_IMPLEMENTATION.md  DOCS.md  LICENSE  Makefile  PRODUCTION.md  QUICKSTART.md  README.md  deploy.sh  docker-compose.yml  setup-cloudflare.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  routes.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .gitignore  AGENTS.md  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/data/: mentor_chats.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/Sections/: App.tsx  Dashboard.tsx  LessonModal.tsx  Login.tsx  MainTopics.tsx  ProgressPath.tsx  Roadmap.tsx  Survey.tsx
frontend/src/app/Sections/Components/: AiMentorPanel.tsx  HobbyStep.tsx  Icons.tsx  Leaderboard.tsx  Profile.tsx  QuestionStep.tsx
frontend/src/app/api/lesson/: route.ts
frontend/src/app/api/roadmap/: route.ts
frontend/src/app/chat-with-mentor/: page.tsx
frontend/src/app/components/: ChatWithMentor.tsx  Dashboard.tsx  LessonModal.tsx  Roadmap.tsx  Survey.tsx
frontend/src/app/data/: lessons.json
frontend/src/app/lib/: constants.ts  grok.ts  lessonBlocks.ts  profileUtils.test.ts  profileUtils.ts  roadmapBuilder.test.ts  roadmapBuilder.ts  types.ts
frontend/src/app/services/: geminiService.ts  lessonService.ts  mentorService.ts
(+6 files in other folders)
