[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the hackathon full-stack starter"
requires-python = ">=3.10"
authors = [{ name = "hackathon-team-vibe", email = "team@example.com" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "toml>=0.10.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.5",
]

[tool.uvicorn]
reload = true
factory = false
host = "127.0.0.1"
port = 8000
app = "app.main:app"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "PL"]
ignore = ["E501"]
